<resources>
    <string name="app_name">HotelUp</string>
    <string name="select">Select Guests &amp; Rooms</string>

    <string name="strike_line"> <strike>$199 </strike> </string>
    <string name="child">Max 2 Adutls &amp; 1 Child</string>
    <string name="breakfast">Free Break Fast, Wifi, pool</string>
    <string name="hotel">Cancellation &amp; Hotel Policy</string>
    <string name="terms">*T&amp;C</string>
    <string name="rating">56 Ratings &amp;\n32 Reviews</string>
    <string name="get">Get 50% Cashback on this booking, upto $99, T&amp;C apply</string>
    <string name="this_hotel_us_highly_rated_by_family_travelers">- This hotel us highly rated by family travelers</string>
    <string name="sunrise_check_in_available">- Sunrise check-in available</string>
    <string name="guest_love_the_location_as_it_near_beach">- Guest love the location as it near beach</string>
    <string name="i_m_important">I’m Important!</string>
    <string name="hotel_policy_and_rules">Hotel Policy and Rules</string>
    <string name="nearby_landmarks">Nearby Landmarks</string>
    <string name="zeroo_cafe">Zeroo Cafe</string>
    <string name="sunset_point">Sunset point</string>
    <string name="museum">Museum</string>
    <string name="hotel_is_known_for_its_good_service_and_courteous_staff">- Hotel is known for its good service and courteous staff</string>
    <string name="settings">Settings</string>
    <string name="refer_earn">Refer and Earn</string>
    <string name="lgout">Log out</string>
    <string name="qA"><![CDATA[Questions & Answers]]></string>
    <string name="t_and_c"><![CDATA[Terms & Conditions]]></string>
    <string name="need_help_about_this_booking"><u>Need Help About this booking?</u></string>
    <string name="get_started">GET STARTED</string>
    <string name="popular_destination">POPULAR DESTINATION</string>


</resources>
