<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image"
                android:src="@drawable/img2"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="5dip"
                app:riv_oval="false" />


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:id="@+id/title"
                        android:text="Classic Room"/>

                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/child"
                        android:textSize="11.7sp"
                        android:textColor="@color/sub_txt_gray"/>

                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast"
                        android:textSize="11.7sp"
                        android:textColor="@color/sub_txt_gray"/>
                </LinearLayout>

                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 offer Applied"
                    android:textSize="11.7sp"
                    android:textColor="@color/green"/>
            </LinearLayout>

            <customfonts.MyTextView_Roboto_Regular
                android:id="@+id/confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="11.7sp"
                android:layout_marginTop="5dp"
                android:text="Free Cancelation, Sunrise Check-in Available"/>

        </LinearLayout>




            </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|bottom"
                    android:orientation="vertical">

                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/sub_txt_gray"
                        android:textSize="11.7sp"
                        android:text="@string/strike_line"/>


                    <customfonts.MyTextView_Roboto_Medium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="$149"/>

                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="per night"
                        android:textColor="@color/sub_txt_gray"
                        android:textSize="8.3sp"/>
                </LinearLayout>
            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/view_line"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pay_img"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_bill"/>


                <customfonts.MyTextView_Roboto_Regular
                    android:id="@+id/payment"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#2ba7b7"
                    android:textSize="13.3sp"
                    android:layout_marginLeft="20dp"
                    android:text="Pay at Hotel"/>


                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book"
                    android:textSize="11.7sp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/red1_rect"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>