<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/red"
                    android:elevation="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="12sp"
                                android:orientation="vertical">
                                <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp">

                                    <ImageView
                                        android:layout_width="15dp"
                                        android:layout_height="15dp"
                                        android:layout_marginLeft="20dp"
                                        android:src="@drawable/ic_back_white"/>

                                    <de.hdodenhof.circleimageview.CircleImageView
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/profile_image"
                                        android:layout_width="65.3dp"
                                        android:layout_height="65.3dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/img2"/>




                                </FrameLayout>


                                <customfonts.MyTextView_Roboto_Regular
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:text="John Doe"
                                    android:gravity="center"
                                    android:layout_marginTop="10sp"/>


                                <customfonts.MyTextView_Roboto_Regular
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="981738211"
                                    android:textSize="11.7sp"
                                    android:textColor="@color/white"
                                    android:gravity="center"/>
                            </LinearLayout>


                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11.7dp"
                    android:background="@color/white"
                    android:elevation="2dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_shortlist" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:text="My Shorlist"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ececec" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_calendar" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:text="My Booking"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ececec" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_questions_answers" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/qA"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ececec" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_refer_n_earn" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/refer_earn"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ececec" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_share" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:fontFamily="sans-serif"
                            android:text="Share App"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ececec" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_settings" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/settings"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ececec" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="21dp"
                        android:paddingLeft="16.3dp"
                        android:paddingTop="21dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_terms_conditions" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="41.3dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/t_and_c"
                            android:textColor="@color/dark_gray"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>


                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Logout"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:padding="12sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_gray"
                    android:background="@drawable/login_rect"/>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</RelativeLayout>